--- a/Latihan5-DOM Test/style.css
+++ b/Latihan5-DOM Test/style.css
@@ -1,5 +1,5 @@
 * {
-    border: 0.1px black ;
+    border: 0.1px black solid;
 }
 
 body {
@@ -25,6 +25,10 @@ h1 {
 }
 
 
+.buttonContainer {
+    
+}
+
 .center {
     margin: 0;
         position: absolute;
@@ -35,7 +39,7 @@ h1 {
 }
 
 div.buttonContainer button {
-    margin-right: 20px;
+    margin-right: 10px;
     padding: 10px;
     color: white;
     background-color: salmon;
@@ -62,3 +66,4 @@ div.buttonContainer button:active {
 .blackText {
     color: black;
 }
+
